# Comfort_Crew

./: README.md  app.py  pyproject.toml  requirements.txt
instance/: users.db
templates/: about-us.html  admin-dashboard.html  customer-dashboard.html  feedback.html  home.html  login.html  professional-dashboard.html  profile.html  register.html  select-category.html  services.html  thank_you.html  view_professional.html
